[gd_scene load_steps=14 format=3 uid="uid://dqt6ouv4vlu0q"]

[ext_resource type="Script" path="res://Scripts/Characters/player.gd" id="1_5anf2"]
[ext_resource type="PackedScene" uid="uid://b653o6e45dnd" path="res://Scenes/Effects/slash.tscn" id="3_4vjuc"]
[ext_resource type="Script" path="res://Scripts/Components/slash.gd" id="3_axx46"]
[ext_resource type="PackedScene" uid="uid://cchar4njta66r" path="res://Scenes/Components/hitbox.tscn" id="5_8qkoa"]
[ext_resource type="Texture2D" uid="uid://cuc105xxrpabw" path="res://Assets/SpriteSheets/cursors.png" id="5_d3rf8"]
[ext_resource type="PackedScene" uid="uid://cwtuomrx5lja2" path="res://Scenes/Components/health.tscn" id="6_4dvfb"]
[ext_resource type="AudioStream" uid="uid://cubyh7c1nh0mi" path="res://Assets/Audio/UI_Sounds/Slash_01.mp3" id="7_vjscb"]
[ext_resource type="AudioStream" uid="uid://bt2kyyl5gqc5l" path="res://Assets/Audio/Combat/pain4.wav" id="8_o8f7o"]
[ext_resource type="AudioStream" uid="uid://bjhpnf10j7ol7" path="res://Assets/Audio/Combat/death3.wav" id="9_gxmah"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vslgp"]
radius = 0.4
height = 1.5

[sub_resource type="BoxShape3D" id="BoxShape3D_qhx10"]
size = Vector3(2.5, 0.45, 1.3)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfv21"]
atlas = ExtResource("5_d3rf8")
region = Rect2(32, 32, 16, 16)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6ed5f"]

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 2
collision_mask = 3
floor_constant_speed = true
floor_max_angle = 0.872665
script = ExtResource("1_5anf2")

[node name="WorldCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
shape = SubResource("CapsuleShape3D_vslgp")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
fov = 90.0

[node name="InteractionRayCast" type="RayCast3D" parent="Camera"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -1.7, 0)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="HandPosition" type="Marker3D" parent="Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.25, -0.6)
visible = false

[node name="Slash" parent="Camera" instance=ExtResource("3_4vjuc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, -0.5)
script = ExtResource("3_axx46")

[node name="AttackArea" type="Area3D" parent="Camera/Slash"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, -0.55)
collision_mask = 8

[node name="SlashShape" type="CollisionShape3D" parent="Camera/Slash/AttackArea"]
shape = SubResource("BoxShape3D_qhx10")
disabled = true

[node name="Timer" type="Timer" parent="Camera/Slash/AttackArea"]
process_callback = 0
one_shot = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Camera/Slash"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0.5)
stream = ExtResource("7_vjscb")
max_db = 6.0
bus = &"SFX"

[node name="Control" type="Control" parent="Camera"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Camera/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_lfv21")

[node name="HitBox" parent="." instance=ExtResource("5_8qkoa")]
collision_layer = 2
_is_enemy = null

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox"]
shape = SubResource("CapsuleShape3D_6ed5f")

[node name="Health" parent="." instance=ExtResource("6_4dvfb")]

[node name="Pain" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_o8f7o")
max_db = -6.0
pitch_scale = 1.1
bus = &"SFX"

[node name="Death" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_gxmah")
max_db = -6.0
pitch_scale = 1.2
bus = &"SFX"

[connection signal="timeout" from="Camera/Slash/AttackArea/Timer" to="Camera/Slash" method="_on_timer_timeout"]
